# espeak-ng-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/edu/tongji/espeak_ng/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/edu/tongji/espeak_ng/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
